# baresip-lvgl

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  LICENSE  Makefile  README.md  all_settings.c  baresip-lvgl.mk  baresip_manager.h  check_sip_server.sh  lv_conf.h  lv_drv_conf.h  test_sa  test_sa.c  walkthrough.md
build_cmake/: CMakeCache.txt  Makefile  baresip-lvgl  cmake_install.cmake
include/: applet.h  applet_manager.h  baresip_manager.h  config_manager.h  contact_manager.h  database_manager.h  history_manager.h  logger.h
install/include/: baresip.h
install/lib/: libre.39.3.0.dylib  libre.39.dylib  libre.dylib  librem.6.12.0.dylib  librem.6.dylib  librem.dylib
install/lib/cmake/libre/: libre-targets-debug.cmake  libre-targets.cmake
install/lib/pkgconfig/: libbaresip.pc  libre.pc  librem.pc
src/: README.md  applet_manager.c  baresip_manager.c  baresip_manager.h  config_manager.c  contact_manager.c  database_manager.c  history_manager.c  main.c
src/applets/: about_applet.c  calculator_applet.c  call_applet.c  call_applet.c.bak2  call_applet.h  call_log_applet.c  chat_applet.c  contacts_applet.c  home_applet.c  settings_applet.c
src/logger/: logger.c
src/manager/: applet_manager.c  baresip_manager.c  config_manager.c  contact_manager.c  database_manager.c  history_manager.c
src/modules/gb28181/: gb28181.c
